--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Vinay Kumar"
   pronouns         : # example: "she/her"  
-  bio              : "**Vinay Kumar** is a Ph.D. scholar in Computer Science at South Asian University, specializing in optical networks and distributed resource allocation. With a passion for research and innovation, he focuses on advancing QoS-aware protocols and optimization techniques in networking."
+  bio              : "Vinay Kumar is a Ph.D. scholar in Computer Science at South Asian University, specializing in optical networks and distributed resource allocation. With a passion for research and innovation, he focuses on advancing QoS-aware protocols and optimization techniques in networking."
   location         : "New Delhi, India"
   # employer         : "Red Brick University"
   # uri              : # URL
